🔄 Add docs for the all routes and complete base exchange request
Faltan algunas validaciones como que los usuarios al momento de aceptar no manden libros que no esten en su pefil, etc.
