# back/controllers/exchangeController.js
@@ -5,18 +5,35 @@ const getAllExchangeRequestUserFrom = async (req, res) => {
     const userIdFrom = req.user.id
     const exchangeRequest = await exchangeService.getAllExchangeRequestUserFrom(userIdFrom)
 
-    if (exchangeRequest.error == "Exchange request not found") {
-      return res.status(404).json(exchangeRequest)
-    }
-
     if (exchangeRequest.error == "The user is not the owner of the request") {
-      return res.status(401).json(exchangeRequest)
+      return res.status(403).json(exchangeRequest)
     }
 
     res.status(200).json(exchangeRequest)
   } catch (error) {
     console.error(error)
     res.status(500).json({ message: 'Error when getting all exchange request' })
+  }
+}
+
+const deleteAllExchangeRequestUserFrom = async (req, res) => {
+  try {
+    const userIdFrom = req.user.id
+    const exchangeRequest = await exchangeService.deleteAllExchangeRequestUserFrom(userIdFrom)
+
+    if (exchangeRequest.error == "The user has no exchange requests") {
+      return res.status(400).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
+    }
+
+    res.status(200).json(exchangeRequest)
+
+  } catch (error) {
+    console.error(error)
+    res.status(500).json({ message: 'Error when deleting all exchange request' })
   }
 }
 
@@ -25,8 +42,8 @@ const getAllExchangeRequestUserTo = async (req, res) => {
     const userIdTo = req.user.id
     const exchangeRequest = await exchangeService.getAllExchangeRequestUserTo(userIdTo)
 
-    if (exchangeRequest.error == "Exchange request not found") {
-      return res.status(404).json(exchangeRequest)
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
     }
 
     res.status(200).json(exchangeRequest)
@@ -36,24 +53,43 @@ const getAllExchangeRequestUserTo = async (req, res) => {
   }
 }
 
+const deleteAllExchangeRequestUserTo = async (req, res) => {
+  try {
+    const userIdTo = req.user.id
+    const exchangeRequest = await exchangeService.deleteAllExchangeRequestUserTo(userIdTo)
+
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "The user has no exchange requests") {
+      return res.status(400).json(exchangeRequest)
+    }
+
+    res.status(200).json(exchangeRequest)
+  } catch (error) {
+    console.error(error)
+    res.status(500).json({ message: 'Error when deleting all exchange request' })
+  }
+}
+
 const requestExchange = async (req, res) => {
   try {
     const bookId = req.params.bookId
     const userIdFrom = req.user.id
-    const userIdTo = req.body.userIdTo
-    const bookOfferedId = req.body.bookOfferedId
 
-    const exchangeRequest = await exchangeService.createExchangeRequest(bookId, userIdFrom, userIdTo, bookOfferedId)
+    const exchangeRequest = await exchangeService.createExchangeRequest(bookId, userIdFrom)
 
     if (exchangeRequest.error == "Book not found") {
       return res.status(404).json(exchangeRequest)
     }
-    if (exchangeRequest.error == "The user is not the owner of the book") {
-      return res.status(403).json(exchangeRequest)
+
+    if (exchangeRequest.error == "User not found") {
+      return res.status(404).json(exchangeRequest)
     }
 
-    if (exchangeRequest.error == "Book to exchange not found") {
-      return res.status(404).json(exchangeRequest)
+    if (exchangeRequest.error == "The user cannot exchange, give or sell their book to themselves") {
+      return res.status(400).json(exchangeRequest)
     }
 
     res.status(201).json(exchangeRequest)
@@ -67,13 +103,27 @@ const acceptExchange = async (req, res) => {
   try {
     const exchangeRequestId = req.params.exchangeRequestId
     const userId = req.user.id
-    const exchangeRequest = await exchangeService.acceptExchangeRequest(exchangeRequestId, userId)
+    const bookUserFrom = req.body.bookUserFrom
+    const exchangeRequest = await exchangeService.acceptExchangeRequest(exchangeRequestId, userId, bookUserFrom)
 
     if (exchangeRequest.error == "Exchange request not found") {
       return res.status(404).json(exchangeRequest)
     }
+
     if (exchangeRequest.error == "User cannot modify this request") {
       return res.status(403).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "Only pending requests can be modified") {
+      return res.status(400).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "Book to exchange not found") {
+      return res.status(404).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "Required book to exchange") {
+      return res.status(400).json(exchangeRequest)
     }
 
     res.status(200).json(exchangeRequest)
@@ -92,8 +142,13 @@ const rejectExchange = async (req, res) => {
     if (exchangeRequest.error == "Exchange request not found") {
       return res.status(404).json(exchangeRequest)
     }
+
     if (exchangeRequest.error == "User cannot modify this request") {
       return res.status(403).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "Only pending requests can be modified") {
+      return res.status(400).json(exchangeRequest)
     }
 
     res.status(200).json(exchangeRequest)
@@ -105,7 +160,9 @@ const rejectExchange = async (req, res) => {
 
 module.exports = {
   getAllExchangeRequestUserFrom,
+  deleteAllExchangeRequestUserFrom,
   getAllExchangeRequestUserTo,
+  deleteAllExchangeRequestUserTo,
   requestExchange,
   acceptExchange,
   rejectExchange
