# back/models/ExchangeRequest.js
@@ -3,9 +3,12 @@ const mongoose = require('mongoose')
 const exchangesSchema = new mongoose.Schema({
     bookId: { type: mongoose.Schema.Types.ObjectId, ref: 'Book' },
     userIdFrom: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
+    usernameUserFrom: { type: mongoose.Schema.Types.String, ref: 'User' },
     userIdTo: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
-    bookOfferedId: { type: mongoose.Schema.Types.ObjectId, ref: 'Book' },
+    usernameUserTo: { type: mongoose.Schema.Types.String, ref: 'User' },
+    libraryUserFrom: { type: mongoose.Schema.Types.Array, ref: 'books' },
     phoneNumberUserFrom: { type: mongoose.Schema.Types.String, ref: 'User' },
+    bookOfferedId: { type: mongoose.Schema.Types.ObjectId, ref: 'Book', default: null },
     status: {
         type: String,
         enum: ['pendiente', 'aceptada', 'rechazada'],
