# back/routes/exchange.routes.js
@@ -5,10 +5,16 @@ const passport = require('../middlewares/auth.middlewares');
 const router = express.Router()
 
 // Get de todas las peticiones creadas por el usuario
-router.get('/exchanges/me', passport.authenticate("jwt", { session: false }), exchangeController.getAllExchangeRequestUserFrom)
+router.get('/exchanges/sent', passport.authenticate("jwt", { session: false }), exchangeController.getAllExchangeRequestUserFrom)
+
+// Delete de todas las peticiones creadas por el usuario
+router.delete('/exchanges/delete/sent', passport.authenticate("jwt", { session: false }), exchangeController.deleteAllExchangeRequestUserFrom)
 
 // Get de todas las peticiones recibidas
 router.get('/exchanges/received', passport.authenticate("jwt", { session: false }), exchangeController.getAllExchangeRequestUserTo)
+
+// Delete de todas las peticiones recibidas
+router.delete('/exchanges/delete/received', passport.authenticate("jwt", { session: false }), exchangeController.deleteAllExchangeRequestUserTo)
 
 // Crear una peticion
 router.post('/exchange/:bookId', passport.authenticate("jwt", { session: false }), exchangeController.requestExchange)
